--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -10,8 +10,11 @@ services:
         environment:
             - NODE_ENV=production
             - CLIENT_DATA=${CLIENT_DATA}
+            - PORT=3000
+            - NEXT_PUBLIC_API_URL=${NEXT_PUBLIC_API_URL:-http://localhost:3000}
         healthcheck:
             test: ['CMD', 'wget', '--spider', 'http://localhost:3000']
             interval: 10s
             timeout: 5s
             retries: 3
+        restart: unless-stopped
