--- a/package.json
+++ b/package.json
@@ -9,6 +9,10 @@
 		"lint": "next lint"
 	},
 	"dependencies": {
+		"@fortawesome/fontawesome-svg-core": "^6.5.1",
+		"@fortawesome/free-brands-svg-icons": "^6.5.1",
+		"@fortawesome/free-solid-svg-icons": "^6.5.1",
+		"@fortawesome/react-fontawesome": "^0.2.0",
 		"autoprefixer": "^10.4.16",
 		"next": "^14.0.0",
 		"postcss": "^8.4.31",
