--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -5,16 +5,16 @@ services:
         build:
             context: .
             dockerfile: Dockerfile
-        ports:
-            - '${PORT:-3000}:3000'
+        expose:
+            - '3000'
         environment:
             - NODE_ENV=production
             - NEXT_PUBLIC_CLIENT_DATA=${NEXT_PUBLIC_CLIENT_DATA}
-            - PORT=${PORT}
-            - NEXT_PUBLIC_API_URL=${NEXT_PUBLIC_API_URL:-http://0.0.0.0:${PORT}}
-        # healthcheck:
-        #     test: ['CMD', 'wget', '--spider', 'http://0.0.0.0:${PORT}']
-        #     interval: 10s
-        #     timeout: 5s
-        #     retries: 3
+            - NEXT_PUBLIC_API_URL=${NEXT_PUBLIC_API_URL:-http://localhost:3000}
+        healthcheck:
+            test: ['CMD', 'curl', '-f', 'http://localhost:3000/api/health']
+            interval: 10s
+            timeout: 5s
+            retries: 3
+            start_period: 30s
         restart: unless-stopped
